CHANGES-1.5.txt
---------------

CHANGES IN CUPS V1.5.1

	- Documentation updates (STR #3885)
	- Fixed some IPP conformance issues in the scheduler.
	- Added ipptool support for repeating requests.
	- Added IPP/2.2 conformance tests and greatly improved the IPP/1.1
	  conformance testing.
	- IPP messages containing mixed integer/rangeOfInteger values did not
	  work (STR #3942)
	- The ipptool program now provides additional diagnostics for badly-
	  formatted responses (STR #3857)
	- When possible, the IPP backend now stops sending job data early on a
	  cancel.
	- cupsSendRequest and cupsWriteRequestData did not properly read all
	  HTTP headers, preventing authentication and encryption upgrades from
	  working in all cases.
	- The client.conf Server directive is no longer supported on Mac OS X
	  10.7 and later.
	- The IPP backend sent the wrong margins in media-col.
	- The scheduler did not save or restore large Kerberos credentials for
	  jobs.
	- The dnssd backend did not properly browse for secure IPP printers.
	- httpAssembleURI* did not properly escape all special characters in the
	  username/password field.
	- The scheduler now logs config file errors to stderr (STR #3936)
	- The configure script incorrectly used bundle-based localizations on
	  Linux (STR #3938)
	- The cups-driverd helper program did not cache .drv files properly,
	  sometimes leading to a crash (STR #3921)
	- CUPS did not build on stock Mac OS X installations.
	- Encryption was broken with OpenSSL.
	- ipptool's XML output used date/time values with timezone offsets,
	  which are not supported by Mac OS X's NSDate class.
	- Several programs did not support the cupsFilter2 keyword in PPD files.
	- The IPP backend incorrectly reported spool-area-full states.
	- cupsMarkOptions() did not protect against a bad PPD that was missing
	  one or more standard Duplex options.
	- The PostScript filter did not mirror N-up output properly.